--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,11 +47,11 @@
         >
     </Button>
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/data"
         >
-    </TextView>
+    </ListView>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
